--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -29,6 +29,7 @@
 			font-size: 18px;
 			font-family: monospace;
 		}
+		<-- Halo -->
     </style>
 </h:head>
 <h:body styleClass="red lighten-1">
