--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -68,8 +68,11 @@
         }
         .link{
             text-decoration: none;
-              color: #1a2537;
+            color: #1a2537;
             font-weight: 600;
+        }
+        .link:hover{
+             color: cadetblue;
         }
         img {
             max-width: 100px;
@@ -107,8 +110,11 @@
                 <i class="fas fa-key icon"></i>
                 <input type="password" placeholder="Password" required="true"/>
             </div>
-            <input type="submit" value="Login" class="button" />
+            <form action="recursos.xhtml">
+                <input type="submit" value="Login" class="button" />
+            </form>
             <p>Recuerda Devolver los Recursos en el plazo establecido.</p>
+            <p>¿No tienes una cuenta? <a class="link" href="recursos.xhtml">Accede</a></p>
         </div>
     </form>
 </h:body>
