Vista Sprint 1 completa

--- a/src/main/webapp/addSala.xhtml
+++ b/src/main/webapp/addSala.xhtml
@@ -113,10 +113,6 @@
         <h1>Agregar Sala</h1>
         <div class="contenedor">
             <div class="input-contenedor">
-                <i class="fas fa fa-key icon"></i>
-                <p:inputText type="String" placeholder="ID" required="true" />
-            </div>
-            <div class="input-contenedor">
                 <i class="fas fa fa-user icon"></i>
                 <p:inputText type="String" placeholder="Nombre" required="true" />
             </div>
@@ -129,7 +125,7 @@
                 <p:inputText type="String" placeholder="Disponible" required="true" />
             </div>
             <div class="input-contenedor">
-                <i class="fas fa fa fa-group icon"></i>
+                <i class="fas fa fa-file icon"></i>
                 <p:inputText type="String" placeholder="Tipo" required="true" value="Sala Estudio"/>
             </div>
             <p:commandButton class="button" value="Registrar" action="recursos?servlet-redirect = true" />
