Inserciones base de datos

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -98,7 +98,7 @@
         <div class="contenedor">
             <div class="input-contenedor">
                 <i class="fas fa-envelope icon"></i>
-                <p:inputText type="text" placeholder="Carnet" required="true" />
+                <p:inputText type="text" placeholder="idUsuario" required="true" />
             </div>
             <div class="input-contenedor">
                 <i class="fas fa-key icon"></i>
