--- a/src/main/webapp/addLibro.xhtml
+++ b/src/main/webapp/addLibro.xhtml
@@ -118,7 +118,7 @@
             </div>
             <div class="input-contenedor">
                 <i class="fas fa fa-user-secret icon"></i>
-                <p:inputText type="String" placeholder="Autor" required="true" />
+                <p:inputText type="String" placeholder="Ubicacion" required="true" />
             </div>
             <div class="input-contenedor">
                 <i class="fas fa fa-check-square icon"></i>
