implementacio apache shiro

--- a/src/main/webapp/admin/addEquipo.xhtml
+++ b/src/main/webapp/admin/addEquipo.xhtml
@@ -20,16 +20,24 @@
         <h1>Agregar Equipo</h1>
         <div class="contenedor">
             <div class="input-contenedor">
-                <i class="fas fa fa fa-database icon"></i>
+                <i class="fas fa fa-user icon"></i>
+                <p:inputText type="String" placeholder="idInterno" required="true" />
+            </div>
+            <div class="input-contenedor">
+                <i class="fas fa fa-user icon"></i>
                 <p:inputText type="String" placeholder="Nombre" required="true" />
             </div>
             <div class="input-contenedor">
-                <i class="fas fa fa fa-desktop icon"></i>
-                <p:inputText type="String" placeholder="Numero Equipo" required="true" />
+                <i class="fas fa fa-user-secret icon"></i>
+                <p:inputText type="String" placeholder="Ubicacion" required="true" />
             </div>
             <div class="input-contenedor">
                 <i class="fas fa fa-check-square icon"></i>
-                <p:inputText type="String" placeholder="Disponible" required="true" />
+                <p:inputText type="String" placeholder="Estado" required="true" />
+            </div>
+            <div class="input-contenedor">
+                <i class="fas fa fa-check-square icon"></i>
+                <p:inputText type="String" placeholder="Unidades" required="true" />
             </div>
             <div class="input-contenedor">
                 <i class="fas fa fa-file icon"></i>
