--- a/src/main/webapp/admin/addSala.xhtml
+++ b/src/main/webapp/admin/addSala.xhtml
@@ -21,15 +21,23 @@
         <div class="contenedor">
             <div class="input-contenedor">
                 <i class="fas fa fa-user icon"></i>
+                <p:inputText type="String" placeholder="idInterno" required="true" />
+            </div>
+            <div class="input-contenedor">
+                <i class="fas fa fa-user icon"></i>
                 <p:inputText type="String" placeholder="Nombre" required="true" />
             </div>
             <div class="input-contenedor">
-                <i class="fas fa fa fa-puzzle-piece icon"></i>
-                <p:inputText type="String" placeholder="Caracteristicas" required="true" />
+                <i class="fas fa fa-user-secret icon"></i>
+                <p:inputText type="String" placeholder="Ubicacion" required="true" />
             </div>
             <div class="input-contenedor">
                 <i class="fas fa fa-check-square icon"></i>
-                <p:inputText type="String" placeholder="Disponible" required="true" />
+                <p:inputText type="String" placeholder="Estado" required="true" />
+            </div>
+            <div class="input-contenedor">
+                <i class="fas fa fa-check-square icon"></i>
+                <p:inputText type="String" placeholder="Capacidad" required="true" />
             </div>
             <div class="input-contenedor">
                 <i class="fas fa fa-file icon"></i>
