--- a/src/main/webapp/admin/addLibro.xhtml
+++ b/src/main/webapp/admin/addLibro.xhtml
@@ -21,6 +21,10 @@
         <div class="contenedor">
             <div class="input-contenedor">
                 <i class="fas fa fa-user icon"></i>
+                <p:inputText type="String" placeholder="idInterno" required="true" />
+            </div>
+            <div class="input-contenedor">
+                <i class="fas fa fa-user icon"></i>
                 <p:inputText type="String" placeholder="Nombre" required="true" />
             </div>
             <div class="input-contenedor">
@@ -29,7 +33,11 @@
             </div>
             <div class="input-contenedor">
                 <i class="fas fa fa-check-square icon"></i>
-                <p:inputText type="String" placeholder="Disponible" required="true" />
+                <p:inputText type="String" placeholder="Estado" required="true" />
+            </div>
+            <div class="input-contenedor">
+                <i class="fas fa fa-check-square icon"></i>
+                <p:inputText type="String" placeholder="Unidades" required="true" />
             </div>
             <div class="input-contenedor">
                 <i class="fas fa fa-file icon"></i>
