--- a/src/main/webapp/public/recursoSalas.xhtml
+++ b/src/main/webapp/public/recursoSalas.xhtml
@@ -35,7 +35,7 @@
                     <a href="#" class="nav-menu-link nav-link">Mis Reservas</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active">Iniciar Sesion</a>
+                    <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active">Iniciar Sesion</a>
                 </li>
             </ul>
         </nav>
