--- a/src/main/webapp/indexAdmin.xhtml
+++ b/src/main/webapp/indexAdmin.xhtml
@@ -19,6 +19,7 @@
 <h:body>
     <header class="header">
         <nav class="nav">
+
             <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
             <h1 class="logo nav-link" >Biblioteca ECI</h1>
             <button class="nav-toggle" aria-label="Abrir menú">
@@ -32,7 +33,7 @@
                     <a href="#" class="nav-menu-link nav-link">Reporte</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active">Cerra Sesion</a>
+                    <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active">Cerra Sesion</a>
                 </li>
             </ul>
         </nav>
