--- a/src/main/webapp/admin/recursoSalasAdmin.xhtml
+++ b/src/main/webapp/admin/recursoSalasAdmin.xhtml
@@ -84,7 +84,7 @@
                         </p:column>
 
                         <p:column headerText="Haga su reserva" style="text-align: center">
-                            <p:button outcome="/public/reservas" value="Ver horarios disponibles">
+                            <p:button outcome="/public/verHorarios" value="Ver horarios disponibles">
                             </p:button>
                         </p:column>
 
