--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui" xmlns:c="http://shiro.apache.org/tags">
+
 <h:head>
     <meta charset="UTF-8" />
     <title>Login</title>
@@ -27,9 +28,14 @@
                 <p:inputText type="password" placeholder="Contraseña" required="true" value="#{loginBean.passwd}" />
             </div>
             <div class="login">
-                <p:commandButton class="button1" value="Ingresar" alig="center" actionListener="#{loginBean.login}" />
-                <p:button class="button2" value="Cancelar" outcome="index" />
+                <p:commandButton id="mybutton" class="button1" value="Ingresar" alig="center" actionListener="#{loginBean.login}" />
+
+                <p:button  class="button2" value="Cancelar" outcome="index" />
                 <p>Recuerda Devolver los Recursos en el plazo establecido.</p>
+                <h:outputText id = "message" value="#{loginBean.showError()}">
+                    <p:autoUpdate/>
+                </h:outputText>
+
             </div>
         </div>
     </h:form>
