--- a/src/main/webapp/public/recursoEquipos.xhtml
+++ b/src/main/webapp/public/recursoEquipos.xhtml
@@ -80,7 +80,7 @@
                         </p:column>
 
                         <p:column headerText="Haga su reserva" style="text-align: center">
-                            <p:button outcome="reservas" value="Ver horarios disponibles">
+                            <p:button outcome="verHorarios" value="Ver horarios disponibles">
                             </p:button>
                         </p:column>
                     </p:dataTable>
