--- a/src/main/webapp/public/recursoLibros.xhtml
+++ b/src/main/webapp/public/recursoLibros.xhtml
@@ -81,7 +81,7 @@
                         </p:column>
 
                         <p:column headerText="Haga su reserva" style="text-align: center">
-                            <p:button outcome="reservas" value="Ver horarios disponibles">
+                            <p:button outcome="verHorarios" value="Ver horarios disponibles">
                             </p:button>
                         </p:column>
 
